# pipka

./: .gitignore  CMakeLists.txt  canvaswidget.cpp  canvaswidget.h  main.cpp
control/: controller.cpp  controller.h  transform.cpp  transform.h
picture/: layer.cpp  layer.h  picture.cpp  picture.h
res/icons/: icons.qrc
res/shaders/: canvas_fragment_shader.frag  shaders.qrc
shaders/: fragment_shader.fsh  vertex_shader.vsh
src/: main.cpp
src/control/: controller.cpp  controller.h  transform.cpp  transform.h
src/control/context/: transform.cpp  transform.h
src/control/context/operations/: operation.h  pixeloperation.cpp  pixeloperation.h  versioncontrolsystem.cpp  versioncontrolsystem.h
src/control/operations/: pixeloperation.cpp  pixeloperation.h  versioncontrolsystem.cpp  versioncontrolsystem.h
src/control/repositories/: blendrepository.h  brushrepository.cpp  brushrepository.h  repository.h  toolrepository.cpp
src/control/repository/: blendrepository.cpp  brushrepository.cpp  brushrepository.h  repository.h  toolrepository.cpp  toolrepository.h
src/control/tools/: movetool.cpp  movetool.h  rasterizer.cpp  rasterizer.h  tool.h
src/control/tools/brushes/: Brush.cpp  Brush.h  brush.cpp  brush.h  squarebrush.cpp  squarebrush.h
src/controller/: controller.cpp  controller.h  rasterizer.cpp  rasterizer.h
src/image/: color.cpp  color.h  image.cpp  image.h  layer.cpp  layer.h
src/image/color/: blend.cpp  blend.h  color.cpp  color.h
src/image/pixel/: pixelmap.cpp  pixelmap.h
src/image/pixel-structure/: chunk.cpp  chunk.h  image.cpp  image.h  pixelmap.h  rectangle.h  temporarypixelbuffer.cpp  temporarypixelbuffer.h
src/image/pixel-structure/buffer/: layerversionbuffer.cpp  layerversionbuffer.h  temporarypixelbuffer.cpp  temporarypixelbuffer.h
src/image/pixel-structure/layer/: chunkedlayer.cpp  chunkedlayer.h  layer.h  unchunkedlayer.cpp  unchunkedlayer.h
src/image/pixel-structures/: chunk.cpp  chunk.h  image.cpp  image.h  layer.cpp  layer.h  rectangle.h
src/shaders/: canvas_vertex_shader.vert
src/ui/: canvaswidget.cpp  canvaswidget.h  eventhandler.cpp  eventhandler.h  palette.h  window.cpp  window.h
src/ui/menus/: floatingwidget.cpp  floatingwidget.h  layerlist.cpp  layerlist.h  maintoolbar.cpp  maintoolbar.h  toollist.cpp  toollist.h
src/ui/menus/elements/: splitter.cpp  splitter.h  topbar.cpp  topbar.h
src/ui/menus/elements/buttons/: iconbutton.cpp  iconbutton.h  menubutton.cpp  menubutton.h
src/ui/menus/elements/dialogs/: createdialog.cpp  createdialog.h
src/ui/menus/lists/: brushitemdelegate.cpp  brushitemdelegate.h  brushlist.cpp  brushlist.h  brushlistmodel.cpp  brushlistmodel.h  layeritemdelegate.cpp  layeritemdelegate.h  layerlist.cpp  layerlist.h  layerlistmodel.cpp  layerlistmodel.h  listitemdelegate.cpp  listitemdelegate.h  scrollbar.cpp  scrollbar.h  toollist.cpp  toollist.h
src/ui/menus/lists/brushlist/: brushitemdelegate.cpp  brushitemdelegate.h  brushlist.cpp  brushlist.h  brushlistmodel.cpp  brushlistmodel.h
src/ui/menus/lists/layerlist/: layerlist.h  layerlistmodel.cpp  layerlistmodel.h
src/ui/menus/tools/: colorselectorslider.cpp  colorselectorslider.h  colorselectorsquare.cpp  colorselectorsquare.h  colorselectorwidget.cpp  colorselectorwidget.h
src/ui/shaders/: canvas_fragment_shader.frag  canvas_vertex_shader.vert
src/ui/window/: canvaswidget.cpp  canvaswidget.h  eventhandler.cpp  eventhandler.h  window.cpp  window.h
src/widgets/: canvaswidget.cpp  canvaswidget.h
widgets/: canvaswidget.cpp  canvaswidget.h
